# freenx-svn

freenx-server/: ChangeLog  RoadMap  node.conf.sample  nxloadconfig  nxnode-login  nxserver  nxserver.old
freenx-server/CVS/: Entries  Repository  Root
freenx-server/trunk/: ChangeLog  freenx-server  node.conf.sample  nxclient  nxdialog  nxkeygen  nxloadconfig  nxnode  nxnode-login  nxprint  nxserver  nxsetup
freenx-website/: download.inc  home.inc  index.php
freenx-website/manke/: index.html
freenx-website/old/: index.html  index.php.alt  style3.css
freenx-website/ukuug/: ukuug.nxs
freenx-website/usage/: .htaccess  index.html  usage_200501.html  usage_200502.html  usage_200503.html  usage_200504.html  usage_200505.html  usage_200506.html  usage_200507.html  webalizer.current  webalizer.hist
nx-utils/nxcups-wrapper/: nxcups-wrapper  nxcupsd-wrapper
nx-utils/nxcupsd-wrapper/: nxcupsd-wrapper
nx-utils/nxfastkde/: kdeglobals  kickerrc
nx-utils/nxfish/: fish.cpp  nx-fishsrv.pl  nxfish.protocol
nx-utils/nxpublickey/: nxssh-usermode
nx-utils/nxredir/: Makefile  nxredir.c
nxcl/: Makefile.am  README  configure.ac  nxcl.pc.in
nxcl/test/: Makefile.am  libtest.cpp  notQttest.cpp  nxcmd.cpp
nxclientlib/: README  nxcallback.h  nxclientlib.cpp  nxclientlib.h  nxclientlib.pro  nxdata.h  nxparsexml.cpp  nxparsexml.h  nxsession.cpp  nxsession.h  nxwritexml.cpp  nxwritexml.h
nxlaunch/: Makefile.am  README
qtnx/: README  logindialog.ui  nxwritexml.cpp  qtnx.pro  qtnxsettings.cpp  qtnxsettings.h  qtnxwin32.pro  qtnxwindow.cpp  qtnxwindow.h  settingsdialog.ui
(+68 files in other folders)
